[package]
name = "coppers"
version = "0.1.1"
edition = "2021"
description = "Coppers is a custom test harnass that measures the energy usage of your test suite."
license = "Apache-2.0"
repository = "https://github.com/ThijsRay/coppers"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.14.2"
hex = "0.4.3"
regex = "1"
pyo3 = { version = "0.16", optional = true, features = ["auto-initialize"] }

[features]
visualization = ["pyo3"]

